<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dev.tropic404.billetterietcsp.LoginActivity"
    android:background="@android:color/background_light">

    <ImageView
        android:layout_width="390dp"
        android:layout_height="150dp"
        android:background="@drawable/img" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/logo130"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:id="@+id/imageView" />

    <TextView
        android:layout_width="390dp"
        android:layout_height="60dp"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/headerText" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:textSize="20sp"
        android:text="@string/mail"
        android:layout_marginTop="25dp"
        android:id="@+id/emailLabel"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@+id/emailInput" />

    <TextView
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:textSize="20sp"
        android:text="@string/password"
        android:textColor="@color/colorPrimary"
        android:id="@+id/mdpLabel"
        android:layout_below="@+id/emailInput"
        android:layout_alignStart="@+id/emailInput"
        android:layout_marginTop="11dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/connexion"
        android:layout_below="@+id/mdpInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:id="@+id/button2" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/newAccount"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button2"
        android:layout_marginBottom="29dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="15"
        android:id="@+id/emailInput"
        android:layout_below="@+id/emailLabel"
        android:layout_centerHorizontal="true"
        android:background="@android:drawable/alert_light_frame"
        android:textColor="@android:color/holo_orange_dark" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="15"
        android:id="@+id/mdpInput"
        android:singleLine="false"
        android:selectAllOnFocus="false"
        android:background="@android:drawable/alert_light_frame"
        android:layout_below="@+id/mdpLabel"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_orange_dark" />


</RelativeLayout>
